--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,23 +3,21 @@ version: '3.7'
 services:
   app:
     image: ruby:3.2
-    container_name: ruby
+    container_name: app
     volumes:
       - ../app:/app
     ports:
-      - 3000:3000
+      - '3000:3000'
     tty: true
     working_dir: /app
-    depends_on:
-      - db
-  db:
+  database:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.mysql
     platform: linux/amd64
-    container_name: db
+    container_name: database
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    ports:
+    ports: # 他のコンテナからmysqlクライアントを用いてアクセスしたい場合は、portを公開する必要あり
       - "3308:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
